test - 1st change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Byung Jong Min</title>
+    <title>Byung Jong *Rabid Sounds* Min</title>
     <link id="mainStyleSheet" rel="stylesheet" href="style1.css">
 </head>
 
