test - 2nd change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Byung Jong *Rabid Sounds* Min</title>
+    <title>Byung Jong Min</title>
     <link id="mainStyleSheet" rel="stylesheet" href="style1.css">
 </head>
 
@@ -14,7 +14,7 @@
     <center>
         <div id="banner">
             <div class="head_title">
-                <h1>Byung Jong Min</h1>
+                <h1>Byung Jong *Rabid Sounds* Min</h1>
             </div>
         </div>
     </center>
