revert to default style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <center>
         <div id="banner">
             <div class="head_title">
-                <h1>Byung Jong *Rabid Sounds* Min</h1>
+                <h1>Byung Jong Min</h1>
             </div>
         </div>
     </center>
