--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </div>
 
 <body class=index>
-    <center>
+    <left>
         <div id="banner">
             <div class="head_title">
-                <h1>Byung Jong Min</h1>
+                <h2>Byung Jong Min</h2>
             </div>
         </div>
-    </center>
+    </left>
 
     <div class="menu">
         <link rel="stylesheet"
