--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <left>
         <div id="banner">
             <div class="head_title">
-                <h2>Byung Jong Min</h2>
+                <h2>Change for Documentation</h2>
             </div>
         </div>
     </left>
