revert back to default

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </div>
 
 <body class=index>
-    <left>
+    <center>
         <div id="banner">
             <div class="head_title">
-                <h2>Change for Documentation</h2>
+                <h1>Byung Jong Min</h1>
             </div>
         </div>
-    </left>
+    </center>
 
     <div class="menu">
         <link rel="stylesheet"
